--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <a href="https://www.speedballart.com/product/speedball-underglazes/" target="_blank"><img src="img/speedball-logo.png" alt="Speedball glaze link"></a>
                 <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi_z_XGnMGLAxUXSTABHd_5Nd0QFnoECDcQAQ&url=https%3A%2F%2Feksartbarn.com%2F&usg=AOvVaw0xMyaoiFm9SKNG1VOPDb1b&opi=89978449" target="_blank"><img src="img/ek's art barn.jpg" alt="Ek's Art Barn link"></a>
                 <a href="https://www.newellbrands.com/" target="_blank"><img src="img/newell.svg" alt="NEWELL link"></a>
+                <a herf="https://www.testors.com/" target="_blank"><img src="img/testors_logo.png" alt="Testors link"></a>
             </p>
         </div>
         <div class="contact">
